# Promptheus

./: .dockerignore  .env.docker.example  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DOCKER.md  Dockerfile  GEMINI.md  QUIET_MODE_IMPLEMENTATION.md  README.md  SUBMISSION_DESCRIPTIONS.md  SUBMISSION_GUIDE.md  USER_ACTION_LOGGING.md  baseline.json  demo_inline_prompt.py  docker-compose.yml  env_validator.py  get_models.py  promptheus-server  pyproject.toml  requirements.txt  sample_prompts.md  sample_prompts.txt  server.json  setup.py  test_quiet_demo.sh  test_tui_demo.py
.github/workflows/: deploy-pages.yml  docker-test.yml  publish.yml
docs/: development.md  documentation.html  index.html  multiuser-auth-plan.md  troubleshooting.md  usage.md  versioning.md  web-ui-guide.html
examples/: .env.example  IMPLEMENTATION-SCREENS.md  README.md  UI-MOCKUPS.md  docker-compose.yml  fastapi-backend-auth.py  react-frontend-auth.tsx
scripts/: analyze_history.py  benchmark_prompts.py  inc_version.py  test-telemetry.sh  test_mcp_direct.py
src/promptheus/: __init__.py  _provider_data.py  api.py  cli.py  commands.py  config.py  (+18 more)
tests/: test_cli.py  test_commands.py  test_config.py  test_config_extended.py  test_core_promptheus.py  test_device_detection.py  test_history.py  test_history_extended.py  test_io_refactor.py  test_library_api.py  test_main_questions.py  test_mcp_server.py  test_model_filtering.py  test_providers.py  test_providers_extended.py  test_quiet_mode.py  test_repl.py  test_telemetry_e2e.py  test_telemetry_extended.py  test_telemetry_summary.py
(+21 files in other folders)
