[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "promptheus"
version = "0.1.0"
description = "AI-powered prompt engineering CLI tool"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Promptheus Contributors"}
]
keywords = ["ai", "prompt-engineering", "cli", "gemini", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "google-generativeai>=0.1.0",
    "anthropic>=0.3.0",
    "questionary>=2.0.0",
    "pyperclip>=1.8.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/abhichandra21/Promptheus"
Repository = "https://github.com/abhichandra21/Promptheus"

[project.scripts]
promptheus = "promptheus.main:main"

[tool.setuptools]
packages = ["promptheus"]
package-dir = {"" = "src"}
